Bug 26279 - [4.2 regression] ICE in do_compare_rtx_and_jump
Summary: [4.2 regression] ICE in do_compare_rtx_and_jump
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.2.0
: P3 normal
Target Milestone: 4.2.0
Assignee: Not yet assigned to anyone
URL:
Keywords: build, ice-on-valid-code
Depends on:
Blocks: 26280
  Show dependency treegraph
 
Reported: 2006-02-14 11:16 UTC by Andreas Schwab
Modified: 2006-02-14 23:17 UTC (History)
3 users (show)

See Also:
Host:
Target: ia64-*-*
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schwab 2006-02-14 11:16:41 UTC
r110954 broke libada on ia64:

/tmp/cvs/gcc-20060214/Build/./gcc/xgcc -B/tmp/cvs/gcc-20060214/Build/./gcc/ -B/tmp/cvs/gcc-20060214/Build/root/ia64-suse-linux/bin/ -B/tmp/cvs/gcc-20060214/Build/root/ia64-suse-linux/lib/ -isystem /tmp/cvs/gcc-20060214/Build/root/ia64-suse-linux/include -isystem /tmp/cvs/gcc-20060214/Build/root/ia64-suse-linux/sys-include -c -g -O2 -fPIC -DUSE_GAS_SYMVER      -W -Wall -gnatpg  a-strunb.adb -o a-strunb.o
+===========================GNAT BUG DETECTED==============================+
| 4.2.0 20060214 (experimental) (ia64-suse-linux-gnu) GCC error:           |
| in do_compare_rtx_and_jump, at dojump.c:945                              |
| Error detected at a-strunb.adb:1050:1                                    |

(gdb) up
During symbol reading, unsupported tag: 'DW_TAG_const_type'.
During symbol reading, unsupported tag: 'DW_TAG_const_type'.
#1  0x40000000008444b0 in do_compare_rtx_and_jump (op0=0x2000000001d68840, 
    op1=<value optimized out>, code=LE, unsignedp=0, mode=TImode, size=0x0, 
    if_false_label=0x0, if_true_label=0x20000000016e3610) at dojump.c:945
945               gcc_unreachable ();
(gdb) l
940               do_jump_by_parts_equality_rtx (mode, op0, op1, if_true_label,
941                                              if_false_label);
942               break;
943
944             default:
945               gcc_unreachable ();
946             }
947         }
948       else
949         emit_cmp_and_jump_insns (op0, op1, code, size, mode, unsignedp,
Comment 1 Roger Sayle 2006-02-14 16:26:20 UTC
Subject: Bug 26279

Author: sayle
Date: Tue Feb 14 16:26:16 2006
New Revision: 110983

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=110983
Log:

	PR middle-end/26279
	PR middle-end/26280
	PR middle-end/26283
	* dojump.c (do_compare_rtx_and_jump): Handle multi-word LE.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/dojump.c

Comment 2 Andrew Pinski 2006-02-14 23:17:43 UTC
Fixed.