re PR middle-end/26279 (ICE in do_compare_rtx_and_jump)

PR middle-end/26279
	PR middle-end/26280
	PR middle-end/26283
	* dojump.c (do_compare_rtx_and_jump): Handle multi-word LE.

From-SVN: r110983